text fix on mobile

--- a/style.css
+++ b/style.css
@@ -192,7 +192,8 @@ body {
   cursor: help;
 }
 
-.text-block:hover p {
+.text-block:hover p,
+.text-block.revealed p {
   --mask-percent: 0%;
 }
 
